# entre_rh

./: .gitignore  BUILD_PLAN.md  IRPS.txt  README.md  Simulador de Salario.html  pyproject.toml
entre_hr/: ausencias.py  ferias.py  hooks.py  install.py  modules.txt  salario.py  simulador.py  utils.py
entre_hr/entre_hr/doctype/adiantamento_de_salario/: adiantamento_de_salario.json  adiantamento_de_salario.py
entre_hr/entre_hr/doctype/ausencia/: ausencia.js  ausencia.json  ausencia.py
entre_hr/entre_hr/doctype/dia_de_ausencia/: dia_de_ausencia.json  dia_de_ausencia.py
entre_hr/entre_hr/doctype/emprestimo/: emprestimo.js  emprestimo.json  emprestimo.py
entre_hr/entre_hr/doctype/entre_hr_settings/: entre_hr_settings.js  entre_hr_settings.json  entre_hr_settings.py
entre_hr/entre_hr/doctype/escalao_irps/: escalao_irps.json  escalao_irps.py
entre_hr/entre_hr/doctype/justificacao_de_faltas/: justificacao_de_faltas.js  justificacao_de_faltas.json  justificacao_de_faltas.py
entre_hr/entre_hr/doctype/outras_deducoes/: outras_deducoes.js  outras_deducoes.json  outras_deducoes.py
entre_hr/entre_hr/doctype/outras_remuneracoes/: outras_remuneracoes.js  outras_remuneracoes.json  outras_remuneracoes.py
entre_hr/entre_hr/doctype/pagamento_aplicado/: pagamento_aplicado.json  pagamento_aplicado.py
entre_hr/entre_hr/doctype/pagamento_de_emprestimo/: pagamento_de_emprestimo.json  (+1 more)
entre_hr/fixtures/: custom_field.json  role.json
entre_hr/payroll/: salary_slip_hooks.py  statutory.py
entre_hr/public/css/: entre_hr.css
entre_hr/public/js/: employee.js  entre_hr.js
(+7 files in other folders)
